refector workflow